# obsidian-pick

./: LICENSE  README.md  pyproject.toml
obsidian_pick/: cli.py  main.py  obsidian.py  otool.py
obsidian_pick/templates/: test.css  test.html
